refactor away RomHandler.getAltFormeOfSpecies()